Update textov a štýlov

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Monkslab</title>
+  <title>Monks Lab | Sdílená dílna v Praze od TopMonks</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -126,13 +126,14 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h1>Vymýšľajte, prototypujte a realizujte vaše nápady. Jsme vaše
-          pražská&nbsp;dílna.</h1>
+<h2>Sdílená dílna v Praze.</h2>
+        <h1>Navrhuj, prototypuj, vytiskni, vyráběj.</h1>
+
         <form id="contact-form">
           <div class="email-input">
             <label>
-              <input type="email" name="EMAIL" placeholder="Zadajte váš e-mail">
-              <button>Zistiť viac</button>
+              <input type="email" name="EMAIL" placeholder="Zadej svůj e-mail">
+              <button>Dejte mi vědět</button>
             </label>
           </div>
           <div class="alert alert--error alert--hidden">
@@ -144,7 +145,7 @@
             Váš e-mail sme si odložili. Ozveme sa.
           </div>
         </form>
-        <p class="helper">Zoscrollujte nižšie a zistite viac...</p>
+        <p class="helper">A co všechno v dílně najdeš a můžeš využít? Zescrolluj níž a zjisti víc.</p>
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
@@ -169,17 +170,13 @@
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-        <h2>O&nbsp;Monks Labe</h2>
+        <h2>O Monks Labu</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
-        <p>Monks Lab je otvorený kreatívny priestor pre domácich kutilov, kreatívcov
-          a študentov, ktorí im umožní prototypovať, vymýšľať a realizovať ich
-          nápady.</p>
+        <p>Monks Lab je otevřený kreativní prostor, který umožňuje kutilům všeho druhu, kreativcům a studenům navrhovat a realizovat jejich nápady.</p>
 
-        <p>Domáci kutili nemusia hnevať svojich susedov a drahé polovičky hlukom a
-          špinou pri obrábaní rôznych materiálov. Školy môžu vďaka Monks Labu
-          rozšíriť svoje vyučovanie o&nbsp;praktické hodiny a pustiť tak študentov
-          k&nbsp;moderným projektom</p>
+        <p>Domácí kutilové už nikdy nemusí otravovat své sousedy a drahé polovičky hlukem a špínou při obrábění různých materiálů. </p>
+        <p>Jsme otevření i pokrokovým školám, které neusínají na vavřínech a chtějí své vyučování rozšířit o praktické hodiny na moderních strojích a přístrojích. </p>
       </div>
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -217,8 +214,7 @@
             fill="black"/>
         </svg>
         <h3>Mecha dílna</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus tincidunt
-          volutpat tortor ipsum arcu, sed commodo elementum.</p>
+        <p>V dílně je k dispozici veškeré vybavení k opracování materiálů jako je dřevo, plast, kov nebo plexisklo. Kromě klasického ručního nářadí a elektrické pilky pro tebe máme třeba i CNC stroj.</p>
       </div>
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -247,8 +243,7 @@
             fill="black"/>
         </svg>
         <h3>3D Space</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odio nec eget
-          dui;at.</p>
+        <p>Koutek s 3D tiskárnama ti nabízí možnost vytisknout i poměrně komplikované objekty. Stačí mít k dispozici model, který si sám vytvoříš nebo stáhneš z internetu. Vytiskni si vlastní šperk, boty, vázu nebo třeba sošku mistra Yody.</p>
       </div>
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -278,8 +273,7 @@
             fill="black"/>
         </svg>
         <h3>Hookamonk spot</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat luctus congue in nec quisque tellus urna
-          accumsan felis.</p>
+        <p>V MonksLabu se vyrábí první AI vodní dýmky na světě. Máš-li více než 18 let, můžeš každou středu přijít ochutnat, popovídat si o tom, jak funguje a jak vznikala a nebo jen tak okounět.</p>
       </div>
     </div>
   </div>
@@ -289,22 +283,21 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h2>O&nbsp;členství v&nbsp;našem<br>Monks Lab</h2>
-        <p><b>Skúšobná prevádzka<br></b>Stavte sa u&nbsp;nás každú<br> stredu od 17:30
-          do&nbsp;20:30</p>
+        <h2>O členství v Monks Labu</h2>
+        <p >Nezávazné prohlídky Monks Labu pro vážné zájemce i zvědavce:<br><br>
+<b>každou středu od 17:30 do 20:30</b>
+</p>
       </div>
       <div
         class="paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-        <p>Monks Lab je prístupný verejnosti počas otváracích hodín. Môžu ho
-          využívať iba členovia, ktorí platia mesačný členský poplatok.</p>
-        <p>Ako často môžu dieľnu využívať závisí od úrovne ich členstva.
-          Členovia môžu neobmedzene využívať výbavu labu. Stroje môžu členovia
-          ovládať až po absolvovaní úvodných školení.</p>
+        <p>Abys měl jistotu, že Monks Lab nebude narvaný k prasknutí a všechny stroje budou funkční, zavedli jsme členský systém.</p>
+        <p>Jakožto člen můžeš po zaplacení poplatku navštěvovat Monks Lab v rámci otevíracích hodin. Po zaškolení můžeš využívat vše, co v Monks Labu najdeš. Kromě svých kolegů kutilů.</p>
+        <p>Člen Monks Labu musí být starší 18 let. Za doprovodu dospělého u nás mohou ale kutit i děti 13+</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       </div>
       <div class="membership_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        <a class="btn" href="/clenstvi">Stát se členem Monks Labu</a>
+        <a class="btn" href="/clenstvi">Jak se stát členem Monks Labu?</a>
       </div>
     </div>
   </div>
@@ -319,15 +312,12 @@
       </div>
       <div
         class="paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-        <p>Centrally located in a vibrant area of Albion (5km from the Brisbane CBD) and
-          surrounded by cafe's, bars, breweries, yoga studios and creative businesses,
-          Colab 4010&nbsp;is the perfect spot for work and play. Contact us to arrange
-          a&nbsp;tour.</p>
-        <p>Zavolajte nám<br><a>+420&nbsp;608&nbsp;026&nbsp;645</a></p>
-        <p>Napište nám<br>
+        <p>Naše dílna je schovaná uprostřed sídliště na pražském Spořilově v prostorách firmy TopMonks. Dostaneš se k nám autobusem na zastávku Hlavní, Choceradská nebo Nad pahorkem. Pro aktivnější jedince je i možnost dorazit pěšky ze zastávky metra Roztyly. Uber k nám na rozdíl od navigace od Google maps trefí vždycky. Dorazíš-li ze směru od parkoviště, je třeba ještě obejít budovu.</p>
+        <p>Volej ve dne v noci. Snad to zvedneme.<br><a>+420&nbsp;608&nbsp;026&nbsp;645</a></p>
+        <p>Nerad telefonuješ nebo nechceš riskovat, že to nezvedneme? Napiš nám.<br>
           <a href="mailto:hello&#64;monkslab.cz">hello&#64;monkslab.cz</a>
         </p>
-        <p>Stavte sa u&nbsp;nás<br> Struhařovská 2931/9, 141 00&nbsp;Praha</p>
+        <p>A nebo víš co? Rovnou se u nás stav.<br> Struhařovská 2931/9, 141 00&nbsp;Praha</p>
       </div>
     </div>
   </div>
