--- a/monkslab.cz/src/html/kontakt/index.html
+++ b/monkslab.cz/src/html/kontakt/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Monkslab</title>
+  <title>Monks Lab | Kontaktní informace</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -65,7 +65,7 @@
             <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="/clenstvi#events">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
-            <li class=""><a href="/kontakt">Kontakt</a></li>
+            <li class=""><a class="active" href="/kontakt">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -177,11 +177,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak sa k&nbsp;nám dostanete?</h2>
-        <p>Popis cesty od MHD, autem a ideálne aj zmením mapku na nákres, jak sa
-          k&nbsp;nám dostanú ľudia. Pokud by se pro stejný účel použil smysluplný
-          text, bylo by těžké hodnotit pouze vzhled, aniž by se pozorovatel nechal
-          svést ke čtení obsahu. Pokud by byl naopak použit nesmyslný, ale
-          pravidelný&nbsp;text</p>
+        <p>Naše dílna je schovaná uprostřed sídliště na pražském Spořilově v prostorách firmy TopMonks. Dostaneš se k nám autobusem na zastávku Hlavní, Choceradská nebo Nad pahorkem. Pro aktivnější jedince je i možnost dorazit pěšky ze zastávky metra Roztyly. Uber k nám na rozdíl od navigace od Google maps trefí vždycky. Dorazíš-li ze směru od parkoviště, je třeba ještě obejít budovu. </p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.188242491491!2d14.489150315245652!3d50.045304879421586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b93b46cc7ec9b%3A0x39c7c65b1184183b!2sTopMonks!5e0!3m2!1scs!2scz!4v1566838990273!5m2!1scs!2scz"
           width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="yes"></iframe>
