fixing broken link in footer

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -21,7 +21,7 @@
             <ul>
               <li><a href="/">Home</a></li>
               <li><a href="/tym/">Tým</a></li>
-              <li><a href="/kde-nas-najdete/">Kde nás najdete</a></li>
+              <li><a href="/potkejte-nas/">Potkejte nás</a></li>
               <li><a href="https://blog.topmonks.com/">Blog</a></li>
               <li><a href="/volna-mista/">Volná místa</a></li>
               <li><a href="/kontakt/">Kontakt</a></li>
