--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -272,19 +272,15 @@
         <p>Potřebujete se podívat na infrastrukturu, analýzu bezpečnosti systému,
           analýzu výkonu systému.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-       <a href="https://www.topmonks.cz/digital-audit/">
+      <a href="/digital-audit/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci web, co prodává</h3>
         <p>Chcete zvýšit zisky díky marketingu. Zrealizujeme podrobný digitální
-          audit vašich webových stránek.</p></a>
-      </div>
-
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-       <a href="https://www.topmonks.cz/consultation/">
+          audit vašich webových stránek.</p>
+      </a>
+      <a href="/consultation/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci optimalizovat ceny</h3>
          <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p></a>
-      </div>
-
+      </a>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci HR 2.0</h3>
         <p>Chcete zavést remote týmy, distribuovanou zodpovědnost, efektivní
@@ -295,18 +291,15 @@
         <p>Jste ve fázi vývoje nového produktu nebo služby a potřebujete celý
           programátorský&nbsp;tým.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-       <a href="https://www.topmonks.cz/retail-consultation/">
+      <a href="/retail-consultation/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;IT</h3>
         <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
-          nabídku z&nbsp;tendru.</p></a>
-      </div>
-
+          nabídku z&nbsp;tendru.</p>
+      </a>
       <div class="advicing_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka">NENAŠLI
           JSTE, CO VÁS TRÁPÍ?</a>
       </div>
-
     </div>
   </div>
 </section>
