Padding in Digital Audit

--- a/www.topmonks.cz/src/html/digital-audit/index.html
+++ b/www.topmonks.cz/src/html/digital-audit/index.html
@@ -23,6 +23,11 @@
   .jumbotron h2, p {
     max-width: 780px;
   }
+  .jumbotron .tm-layout-wrapper {
+    padding-bottom: 0;
+  } .audit .tm-layout-wrapper {
+    padding-top: 0;
+  }
 
   .page-bgnd {
     background: url("https://res.cloudinary.com/topmonks/image/upload/v1565755279/TM%20Subpages/subbages_shadow-bgnd.png") center no-repeat;
@@ -51,6 +56,9 @@
 
   .networking h2 {
     text-align: left;
+  }
+  .line-between {
+    padding: 0;
   }
 </style>
 {% endblock %}
