Úpravy textu a pridanie testimonialu na digi audit

--- a/www.topmonks.cz/src/html/digital-audit/index.html
+++ b/www.topmonks.cz/src/html/digital-audit/index.html
@@ -335,7 +335,20 @@
           <h2>Naši zákazníci říkají, že...</h2>
         </div>
         <div
-          class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <title>Quotation</title>
+            <path
+              d="M3.16 25C2.09333 23.3516 1.29333 21.7164 0.76 20.0942C0.253333 18.4458 0 16.8106 0 15.1884C0 12.3888 0.746667 9.70696 2.24 7.14286C3.73333 4.55259 5.93333 2.17164 8.84 0L12.76 2.27629C13.08 2.48561 13.3067 2.72109 13.44 2.98273C13.6 3.21821 13.68 3.46677 13.68 3.72842C13.68 4.01622 13.6133 4.29095 13.48 4.55259C13.3467 4.81424 13.1867 5.03663 13 5.21978C12.7067 5.53375 12.3733 5.92622 12 6.39717C11.6533 6.84197 11.32 7.37834 11 8.00628C10.68 8.60806 10.4 9.28833 10.16 10.0471C9.94667 10.7797 9.84 11.5777 9.84 12.4411C9.84 13.383 10 14.3904 10.32 15.4631C10.6667 16.5358 11.2267 17.6871 12 18.9168C12.2667 19.3354 12.4 19.7541 12.4 20.1727C12.4 20.6436 12.24 21.0623 11.92 21.4286C11.6 21.7949 11.16 22.0827 10.6 22.292L3.16 25ZM17.48 25C16.4133 23.3516 15.6133 21.7164 15.08 20.0942C14.5733 18.4458 14.32 16.8106 14.32 15.1884C14.32 12.3888 15.0667 9.70696 16.56 7.14286C18.0533 4.55259 20.2533 2.17164 23.16 0L27.08 2.27629C27.4 2.48561 27.6267 2.72109 27.76 2.98273C27.92 3.21821 28 3.46677 28 3.72842C28 4.01622 27.9333 4.29095 27.8 4.55259C27.6667 4.81424 27.5067 5.03663 27.32 5.21978C27.0267 5.53375 26.6933 5.92622 26.32 6.39717C25.9733 6.84197 25.64 7.37834 25.32 8.00628C25 8.60806 24.72 9.28833 24.48 10.0471C24.2667 10.7797 24.16 11.5777 24.16 12.4411C24.16 13.383 24.32 14.3904 24.64 15.4631C24.9867 16.5358 25.5467 17.6871 26.32 18.9168C26.5867 19.3354 26.72 19.7541 26.72 20.1727C26.72 20.6436 26.56 21.0623 26.24 21.4286C25.92 21.7949 25.48 22.0827 24.92 22.292L17.48 25Z"
+              fill="#D3D3D3"/>
+          </svg>
+          <blockquote>
+Po několika úpravách webu "předními odborníky" jsme se i s tímto požadavkem obrátili na TopMonks - konkrétně jejich UX konzultační tým. Profesionální přístup Tomáše a nekompromisní pointy Veroniky vedly k velmi rychlému redesignu webu, který nyní plní nastavené cíle, je přehledný a jednoduchý, a přivádí nám leady takřka "až pod nos".          </blockquote>
+          <hr class="line-between_grey">
+          <figcaption><b>Kamil Tomáš</b><br>Purposefly</figcaption>
+        </div>
+        <div
+          class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>Quotation</title>
             <path
@@ -352,7 +365,7 @@
           <figcaption><b>Radek Blaha</b><br>Top-style.cz</figcaption>
         </div>
         <div
-          class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>Quotation</title>
             <path
