--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -338,7 +338,7 @@
               fill="#D3D3D3"/>
           </svg>
           <blockquote>
-            Tomáš v rámci auditu webu odhalil na našem eshopu řadu chyb, kterých jsem si jako majitel eshopu nevšiml. Většinu změn jsme zapracovali a postupně se nám začaly dostávat výsledky. Objednávky nám narostli o 20%. Děkujeme a doporučujeme!
+            Tomáš v rámci auditu webu odhalil na našem eshopu řadu chyb, kterých jsem si jako majitel eshopu nevšiml. Většinu změn jsme zapracovali a postupně se nám začaly dostávat výsledky. Objednávky nám narostly o 20%. Děkujeme a doporučujeme!
           </blockquote>
           <hr class="line-between_grey">
           <figcaption><b>Radek Blaha</b><br>Top-style.cz</figcaption>
