--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -87,7 +87,7 @@
           <path fill-rule="evenodd" clip-rule="evenodd" d="M82.0246 93.5041C82.0246 93.2257 81.7989 93 81.5205 93C81.2421 93 81.0164 93.2257 81.0164 93.5041V95.0164H79.5041C79.2257 95.0164 79 95.2421 79 95.5206C79 95.799 79.2257 96.0247 79.5041 96.0247H81.0164V97.537C81.0164 97.8154 81.2421 98.0411 81.5205 98.0411C81.7989 98.0411 82.0246 97.8154 82.0246 97.537V96.0247H83.537C83.8154 96.0247 84.0411 95.799 84.0411 95.5206C84.0411 95.2421 83.8154 95.0164 83.537 95.0164H82.0246V93.5041Z" fill="#F0BE59"/>
           <path fill-rule="evenodd" clip-rule="evenodd" d="M75.15 46.6001C77.4419 46.6001 79.2999 48.4581 79.2999 50.7501C79.2999 53.042 77.4419 54.9 75.15 54.9C72.858 54.9 71 53.042 71 50.7501C71 48.4581 72.858 46.6001 75.15 46.6001ZM75.1498 47.7858C73.5127 47.7858 72.1856 49.1129 72.1856 50.75C72.1856 52.3872 73.5127 53.7143 75.1498 53.7143C76.787 53.7143 78.1141 52.3872 78.1141 50.75C78.1141 49.1129 76.787 47.7858 75.1498 47.7858Z" fill="#F0BE59"/>
         </svg>
-        <h3>Jak IT retail konzultace probíhá?</h3>
+        <h3>Jak retail IT konzultace probíhá?</h3>
         <p>Pomocí konzultace využijeme na maximum vaše současné IT systémy.
           Potkáme se přímo ve vaší firmě, během prvního dne zjistíme aktuální
           stav vašich IT systémů. Najdeme slabá místa, která je potřeba
@@ -138,8 +138,8 @@
                 d="M86.15 18C88.4419 18 90.2999 19.858 90.2999 22.15C90.2999 24.4419 88.4419 26.2999 86.15 26.2999C83.858 26.2999 82 24.4419 82 22.15C82 19.858 83.858 18 86.15 18ZM86.1498 19.1857C84.5127 19.1857 83.1856 20.5128 83.1856 22.1499C83.1856 23.7871 84.5127 25.1142 86.1498 25.1142C87.787 25.1142 89.1141 23.7871 89.1141 22.1499C89.1141 20.5128 87.787 19.1857 86.1498 19.1857Z"
                 fill="#F0BE59"/>
         </svg>
-        <h3>Co IT retail konzultací získáte?</h3>
-        <p>Výsledkem IT konzultace je propojenost s&nbsp;účetních systémů se
+        <h3>Co retail IT konzultací získáte?</h3>
+        <p>Výsledkem IT konzultace je propojenost účetních systémů se
           skladovým hospodářství, logistiky, propojenost retailu s&nbsp;ecommerce,
           optimalizace cen a zásob, sezonní stabilita systémů a obvykle vyšší zisk.
           <a href="https://www.topmonks.cz/retail-consultation/" style="text-decoration: none" class="purple">Docílíme ho pomocí celkového zefektivnění procesů</a>, které v&nbsp;původním
