--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -12,6 +12,13 @@
   <meta property="og:url" content="https://monkslab.cz/">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <header class="app-bar">
   <div class="mdc-layout-grid layout-width">
@@ -126,9 +133,9 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-<h2>Sdílená dílna v Praze.</h2>
         <h1>Navrhuj, prototypuj, vytiskni, vyráběj.</h1>
-
+        <p class="paragraph_text">Otevíráme už v&nbsp;listopadu 2019.&nbsp;Chceš vědět kdy přesně? Nech nám na
+          sebe svůj e-mail a my se ti ozveme.</p>
         <form id="contact-form">
           <div class="email-input">
             <label>
