Monsklab - změny v textech, fontech, akce:hover

--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -165,8 +165,9 @@
             fill="black"/>
         </svg>
         <h3>Monk Junior</h3>
-        <p>Pro nováčky v našem Monks Labu. Můžeš přijít kdykoli v rámci otevíracích hodin, kdy jsou přítomni asistenti, kteří ti poradí a pomůžou, když budeš potřebovat.
-</p>
+        <p>Pro nováčky v našem Monks Labu. Můžeš přijít kdykoli v rámci otevíracích hodin, kdy jsou přítomni asistenti,
+          kteří ti poradí a pomůžou, když budeš potřebovat.
+        </p>
         <p><b>399&nbsp;Kč s&nbsp;DPH za měsíc</b></p>
       </div>
       <div
@@ -205,7 +206,8 @@
             fill="black"/>
         </svg>
         <h3>Monk Senior</h3>
-        <p>Pro zkušenější, kteří mají něco málo kutilství za sebou. Jakožto senior máš k dispozici Monks Lab celý jeden den v týdnu, tedy 24 hodin.</p>
+        <p>Pro zkušenější, kteří mají něco málo kutilství za sebou. Jakožto senior máš k dispozici Monks Lab celý jeden
+          den v týdnu, tedy 24 hodin.</p>
         <p><b>599&nbsp;Kč s&nbsp;DPH za měsíc</b></p>
       </div>
       <div
@@ -244,10 +246,12 @@
             fill="black"/>
         </svg>
         <h3>Monk Expert</h3>
-        <p>Pro ty, kteří jsou s námi už delší dobu. Máš přístup do Monks Labu 24/7. Můžeš vyrábět, obrábět, tisknout, řezat a šroubovat bez přestání a do sytosti.</p>
+        <p>Pro ty, kteří jsou s námi už delší dobu. Máš přístup do Monks Labu 24/7. Můžeš vyrábět, obrábět, tisknout,
+          řezat a šroubovat bez přestání a do sytosti.</p>
         <p><b>799 Kč s DPH za měsíc</b></p>
       </div>
-      <div class="membership_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
+      <div
+        class="membership_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
         <a class="btn" href="#membership">Chci se stát členem</a>
       </div>
     </div>
@@ -263,13 +267,16 @@
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Přijď se s námi seznámit do Labu</h3>
-        <p>Než začneš cokoli kutit, potřebuješ vědět, kde, co a jak. To ti všechno ukážeme a vysvětlíme osobně v Monks Labu. Prohlídky se konají každou středu v 18:00. Jsou zdarma a bez registrace. Tak prostě přijď.</p>
+        <p>Než začneš cokoli kutit, potřebuješ vědět, kde, co a jak. To ti všechno ukážeme a vysvětlíme osobně v Monks
+          Labu. Prohlídky se konají každou středu v 18:00. Jsou zdarma a bez registrace. Tak prostě přijď.</p>
         <a href="#events">Nejbližší akce</a>
       </div>
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Zaškol se a zaplať členství</h3>
-        <p>Když se ti u nás bude líbit, můžeš se na prohlídce rovnou nechat zaškolit na jakýkoli stroj a rovnou zaplatit Junior členství. Seniorem a Expertem se můžeš stát až po uplynutí krátké doby. Více info  ti dáme osobně přímo v Monks Labu.</p>
+        <p>Když se ti u nás bude líbit, můžeš se na prohlídce rovnou nechat zaškolit na jakýkoli stroj a rovnou zaplatit
+          Junior členství. Seniorem a Expertem se můžeš stát až po uplynutí krátké doby. Více info ti dáme osobně přímo
+          v Monks Labu.</p>
       </div>
     </div>
   </div>
@@ -282,10 +289,11 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Nejbližší akce</h2>
       </div>
-      <div
-        class="box-grey mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
-        <div class="mdc-layout-grid__inner">
-          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+
+      <a href="" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="box box--grey mdc-layout-grid__inner">
+          <div
+            class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Ikona Domečku se srdíčkem - pro text o Monkslab přehlídce</title>
               <path
@@ -296,17 +304,20 @@
                 fill="black"/>
             </svg>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
+          <div
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Monks Lab přehlídka</h3>
-            <p>Přijď se podívat, jak to u nás vypadá a chodí. Ukážeme ti, co všechno v dílně máme a jak to u nás funguje. Dozvíš se, co všechno v Monks Labu vyrobit jde a co naopak nejde. Registruj se na Meetupu. Registrace je zdarma.</p>
+            <p>Přijď se podívat, jak to u nás vypadá a chodí. Ukážeme ti, co všechno v dílně máme a jak to u nás
+              funguje. Dozvíš se, co všechno v Monks Labu vyrobit jde a co naopak nejde. Registruj se na Meetupu.
+              Registrace je zdarma.</p>
           </div>
-
         </div>
-      </div>
-      <div
-        class="box-grey mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
-        <div class="mdc-layout-grid__inner">
-          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+      </a>
+
+      <a href="" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="box box--grey mdc-layout-grid__inner">
+          <div
+            class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Ikona ruky - pro Hands-on text</title>
               <path
@@ -317,13 +328,18 @@
                 fill="black"/>
             </svg>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
+          <div
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Hands-on test první elektronické dýmky na světe</h3>
-            <p>V Monks Labu se vyrábí takový unikát, jako je první elektronická dýmka na světě. A ty máš tu možnost vidět nejen to, jak se vyrábí, ale také ji společně s námi testovat. Přijď ochutnat a popovídat si o všem technickém i netechnickém u šálku čaje. A dýmky samozřejmě. Registruj se na Meetupu</a>. Registrace je zdarma.</p>
+            <p>V Monks Labu se vyrábí takový unikát, jako je první elektronická dýmka na světě. A ty máš tu možnost
+              vidět nejen to, jak se vyrábí, ale také ji společně s námi testovat. Přijď ochutnat a popovídat si o
+              všem technickém i netechnickém u šálku čaje. A dýmky samozřejmě. Registruj se na Meetupu. Registrace je
+              zdarma.</p>
           </div>
-
         </div>
-      </div>
+      </a>
+
+
     </div>
   </div>
 </section>
@@ -337,7 +353,10 @@
       </div>
       <div
         class="paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-        <p>Naše dílna je schovaná uprostřed sídliště na pražském Spořilově v prostorách firmy TopMonks. Dostaneš se k nám autobusem na zastávku Hlavní, Choceradská nebo Nad pahorkem. Pro aktivnější jedince je i možnost dorazit pěšky ze zastávky metra Roztyly. Uber k nám na rozdíl od navigace od Google maps trefí vždycky. Dorazíš-li ze směru od parkoviště, je třeba ještě obejít budovu. </p>
+        <p>Naše dílna je schovaná uprostřed sídliště na pražském Spořilově v prostorách firmy TopMonks. Dostaneš se k
+          nám autobusem na zastávku Hlavní, Choceradská nebo Nad pahorkem. Pro aktivnější jedince je i možnost dorazit
+          pěšky ze zastávky metra Roztyly. Uber k nám na rozdíl od navigace od Google maps trefí vždycky. Dorazíš-li ze
+          směru od parkoviště, je třeba ještě obejít budovu. </p>
         <p>Volej ve dne v noci. Snad to zvedneme.<br><a>+420&nbsp;608&nbsp;026&nbsp;645</a></p>
         <p>Nerad telefonuješ nebo nechceš riskovat, že to nezvedneme? Napiš nám.<br>
           <a href="mailto:hello&#64;monkslab.cz">hello&#64;monkslab.cz</a>
