--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -267,17 +267,17 @@
           efektivní řešení? Vybrali jsme pro vás nejčastější situace, které
           s&nbsp;klienty řešíme.</p>
       </div>
-      <a href="/digital-audit/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <a href="/digitalni-audit/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci web, co prodává</h3>
         <p>Chcete zvýšit zisky díky marketingu. Zrealizujeme podrobný digitální
           audit vašich webových stránek.</p>
       </a>
-      <a href="/retail-consultation/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <a href="/retail-konzultace/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;IT</h3>
         <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
           nabídku z&nbsp;tendru.</p>
       </a>
-      <a href="/consultation/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <a href="/optimalizace-cenotvorby/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci optimalizovat ceny</h3>
          <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p></a>
       </a>
