--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -217,13 +217,13 @@
         <h3 class="purple">Retailová konzultace středně velké firmy</h3>
         <p>Přečtěte si více o&nbsp;tom, jak jsme pomohli vyřešit problémy středně
           velké firmy s&nbsp;obratem 220&nbsp;milionů&nbsp;korun.</p>
-        <a href="https://www.topmonks.cz/retail-consultation/" class="button">ZJISTIT VÍCE</a>
+        <a href="https://www.topmonks.cz/retail-konzultace/" class="button">ZJISTIT VÍCE</a>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="purple">Implementace inteligentní cenotvorby</h3>
         <p>Přečtěte si více o&nbsp;tom, jak využíváme nástroj Price f (x)
           k&nbsp;provádění inteligentní cenotvorby</p>
-        <a href="https://www.topmonks.cz/consultation/" class="button">ZJISTIT VÍCE</a>
+        <a href="https://www.topmonks.cz/optimalizace-cenotvorby/" class="button">ZJISTIT VÍCE</a>
       </div>
     </div>
   </div>
