--- a/www.topmonks.cz/src/html/retail-konzultace/index.html
+++ b/www.topmonks.cz/src/html/retail-konzultace/index.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/topmonks.html' %}
-{% set page = 'topmonks-retail-consultation' %}
+{% set page = 'topmonks-retail-optimalizace-cenotvorby' %}
 {% block title %}Retailová Konzultace - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Retailová Konzultace Středně Velké Firmy">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
-<meta property="og:url" content="https://www.topmonks.cz/retail-consultation/">
+<meta property="og:url" content="https://www.topmonks.cz/retail-konzultace/">
 <meta property="og:site_name" content="TopMonks.cz">
 <meta property="business:contact_data:street_address" content="Struhařovská 2931/9"/>
 <meta property="business:contact_data:locality" content="Praha 4"/>
