--- a/www.topmonks.cz/src/html/digitalni-audit/index.html
+++ b/www.topmonks.cz/src/html/digitalni-audit/index.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/topmonks.html' %}
-{% set page = 'topmonks-digital-audit' %}
+{% set page = 'topmonks-digitalni-audit' %}
 {% block title %}Digitální audit - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Digitální audit pro zvýšení vašeho revenue">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
-<meta property="og:url" content="https://www.topmonks.cz/digital-audit/">
+<meta property="og:url" content="https://www.topmonks.cz/digitalni-audit/">
 <meta property="og:site_name" content="TopMonks.cz">
 <meta property="business:contact_data:street_address" content="Struhařovská 2931/9"/>
 <meta property="business:contact_data:locality" content="Praha 4"/>
