--- a/www.topmonks.cz/src/html/optimalizace-cenotvorby/index.html
+++ b/www.topmonks.cz/src/html/optimalizace-cenotvorby/index.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/topmonks.html' %}
-{% set page = 'topmonks-consultation' %}
+{% set page = 'topmonks-optimalizace-cenotvorby' %}
 {% block title %}Konzultace Inteligentní Cenotvorby - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Konzultace a Implementace Inteligentní Cenotvorby">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
-<meta property="og:url" content="https://www.topmonks.cz/consultation/">
+<meta property="og:url" content="https://www.topmonks.cz/optimalizace-cenotvorby/">
 <meta property="og:site_name" content="TopMonks.cz">
 <meta property="business:contact_data:street_address" content="Struhařovská 2931/9"/>
 <meta property="business:contact_data:locality" content="Praha 4"/>
