Monkslab - dodání nadpisu

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -133,7 +133,8 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h1>Navrhuj, prototypuj, vytiskni, vyráběj.</h1>
+        <h1>Jsme pražská dílna</h1>
+        <h2>Navrhuj, prototypuj, vytiskni, vyráběj.</h2>
         <p class="paragraph_text">Otevíráme už v&nbsp;listopadu 2019.&nbsp;Chceš vědět kdy přesně? Nech nám na
           sebe svůj e-mail a my se ti ozveme.</p>
         <form id="contact-form">
