Upravy titles a jeden zbytočný link na webe

--- a/www.topmonks.cz/src/html/it-ecommerce/index.html
+++ b/www.topmonks.cz/src/html/it-ecommerce/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-it-ecommerce' %}
-{% block title %}IT v Ecommerce - TopMonks{% endblock %}
+{% block title %}IT Ecommerce - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks IT v Ecommerce">
