--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-it-retail' %}
-{% block title %}IT v Retailu - TopMonks{% endblock %}
+{% block title %}IT Retail - TopMonks{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks v IT Retailu">
