--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -272,15 +272,15 @@
         <p>Chcete zvýšit zisky díky marketingu. Zrealizujeme podrobný digitální
           audit vašich webových stránek.</p>
       </a>
-      <a href="/retail-konzultace/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Chci poradit s&nbsp;IT</h3>
-        <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
-          nabídku z&nbsp;tendru.</p>
-      </a>
       <a href="/optimalizace-cenotvorby/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci optimalizovat ceny</h3>
          <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p></a>
       </a>
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3>Chci poradit s&nbsp;IT</h3>
+        <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
+          nabídku z&nbsp;tendru.</p>
+      </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;rychlostí a bezpečností</h3>
         <p>Potřebujete se podívat na infrastrukturu, analýzu bezpečnosti systému,
