TM. New subpage: bezpecnostni audit

--- a/www.topmonks.cz/src/html/digitalni-audit/index.html
+++ b/www.topmonks.cz/src/html/digitalni-audit/index.html
@@ -15,57 +15,12 @@
 <meta property="business:contact_data:email" content="info@topmonks.com"/>
 <meta property="business:contact_data:phone_number" content="+420 226 257 521"/>
 <meta property="business:contact_data:website" content="https://www.topmonks.cz/"/>
-<style>
-  .purple {
-    font-weight: 700;
-  }
-
-  .jumbotron h2, p {
-    max-width: 780px;
-  }
-  .jumbotron .tm-layout-wrapper {
-    padding-bottom: 0;
-  } .audit .tm-layout-wrapper {
-    padding-top: 0;
-  }
-
-  .page-bgnd {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1565755279/TM%20Subpages/subbages_shadow-bgnd.png") center no-repeat;
-    background-size: 100%;
-  }
-
-  .audit h2 {
-    text-align: left;
-  }
-
-  .audit h3 {
-    text-transform: uppercase;
-  }
-
-  .audit p {
-    max-width: 780px;
-  }
-
-  .audit .box p {
-    line-height: 29px;
-  }
-
-  .audit .box svg {
-    padding-top: 2em;
-  }
-
-  .networking h2 {
-    text-align: left;
-  }
-  .line-between {
-    padding: 0;
-  }
-</style>
 {% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="/stylesheets/v2.css">
 <link rel="stylesheet" href="/stylesheets/sub-pages/main.css">
+<link rel="stylesheet" href="/stylesheets/sub-pages/audits.css">
 
 <section class="jumbotron">
   <div class="mdc-layout-grid">
