--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -260,7 +260,7 @@
 <link rel="stylesheet" href="/stylesheets/hp/advicing.css">
 <section id="advicing" class="we-advice">
   <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
+    <a class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Řešíte konkrétní situaci?</h2>
         <p>Potřebujete poradit s&nbsp;jedním konkrétním problémem a najít jeho
@@ -274,18 +274,18 @@
       </a>
       <a href="/optimalizace-cenotvorby/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci optimalizovat ceny</h3>
-         <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p></a>
+         <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p>
       </a>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;IT</h3>
         <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
           nabídku z&nbsp;tendru.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <a href="/bezpecnostni-audit/" class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s bezpečností webu nebo aplikace</h3>
         <p>Potřebujete se podívat na infrastrukturu, analýzu bezpečnosti systému,
           analýzu výkonu systému.</p>
-      </div>
+      </a>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci HR 2.0</h3>
         <p>Chcete zavést remote týmy, distribuovanou zodpovědnost, efektivní
